# docutray-claude-code-plugins

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README-devflow.md  README.md  diagrams-devflow.md  install-kimi-flows.sh
.claude-plugin/: marketplace.json  plugin.json
.kimi/: README.md
.kimi/skills/devflow-check/: SKILL.md
.kimi/skills/devflow-dev/: SKILL.md
.kimi/skills/devflow-epic/: SKILL.md
.kimi/skills/devflow-research/: SKILL.md
.kimi/skills/devflow-review-pr/: SKILL.md
.kimi/skills/devflow/feat/: SKILL.md
commands/: check.md  dev.md  devflow-setup.md  research.md
plugins/devflow/: README.md
plugins/devflow/.claude-plugin/: plugin.json
plugins/devflow/commands/: check.md  dev.md  devflow-setup.md  epic.md  feat.md  review-pr.md
plugins/devflow/templates/python/: check.template.md  dev.template.md
plugins/devflow/templates/typescript-node/: check.template.md
plugins/rag-research/: .env.example  .gitignore  README.md  pyproject.toml
plugins/rag-research/.claude-plugin/: plugin.json
plugins/rag-research/agents/: deep-researcher.md
plugins/rag-research/commands/: add-doc.md  list.md  research.md
plugins/rag-research/skills/rag-research/: SKILL.md
plugins/rag-research/skills/rag-research/references/: configuration.md  examples.md
plugins/rag-research/src/: __init__.py  cli.py  document_loader.py  rag_manager.py
templates/python/: check.template.md
templates/typescript-node/: check.template.md  dev.template.md
