[project]
name = "rag-research"
version = "1.0.0"
description = "RAG-based reference document management for Claude Code"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "qdrant-client[fastembed]>=1.12.0",
    "python-dotenv>=1.0.0",
    "mistralai>=1.0.0",
    "pypdf>=4.0.0",
]

[project.scripts]
rag-research = "src.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
